frontend/test/should_pass/retype_011.grg
using retype_model_001;

rule r {
	x:TYPE1;

	replace {
		y:TYPE2<x>;
		z:typeof(x);
	}
}

