frontend/test/should_fail/retype_020.grg
using retype_model_001;

rule r {
	x:TYPE1;
	
	alternative {
		First {
			alternative {
				First_First {
					modify {
						y:TYPE2<x>;
					}
				}
				First_Second {
					modify {}
				}
			}
			
			modify {
				y:TYPE3<x>;
			}
		}
		Second {
			modify {}
		}
	}

	modify {}
}

